--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <div id="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#sec">Home</a></li>
                 <li><a href="#aPropos">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
@@ -44,15 +44,149 @@
             <!-- A propos -->
             <section class="aPropos" id="aPropos">
                 <div class="titre">
-                    <h2>A Propos de Moi</h2>
+                    <h2>à Propos de Moi</h2>
                 </div>
                 <div class="content">
                     <div class="textBox">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto fugit odit, quidem distinctio adipisci, porro recusandae architecto ullam quasi, voluptas expedita suscipit? Quas consequuntur rem cupiditate tempore maxime magni dolor voluptate, impedit, incidunt similique praesentium et eligendi qui maiores eveniet distinctio aliquid reiciendis odit nobis asperiores totam debitis ullam? Similique, fugit aut, veniam quas impedit numquam maiores reprehenderit cumque repudiandae cupiditate ratione amet error pariatur nemo! Ullam aliquam non inventore, at omnis qui ea accusantium quam maxime sequi labore consectetur repellendus quidem quod aliquid possimus dolor itaque explicabo nulla repudiandae cupiditate iste, est dolorum rerum. Placeat id natus quasi laudantium nam perspiciatis error magni tempore quas officiis nostrum eum aperiam, corrupti, illo veniam unde asperiores? Illo cumque harum eaque officia quas sapiente ut vitae iste voluptatum accusamus fuga impedit, possimus quasi, corporis reprehenderit ea, quaerat magnam veniam? Quam voluptates ratione fugit temporibus in voluptate expedita dolorem non error, labore quibusdam, quo tenetur maxime asperiores et excepturi doloribus magni, magnam nostrum! Nulla consequatur eius iure tenetur optio quo aut facilis pariatur provident? Obcaecati consequatur quibusdam quod temporibus aspernatur ducimus quisquam commodi possimus, magnam perferendis, impedit consequuntur ab dignissimos ipsam eligendi aliquam, deserunt corporis cupiditate sapiente. Saepe accusamus cumque pariatur obcaecati consequuntur.
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto fugit odit, quidem 
+                            distinctio adipisci, porro recusandae architecto ullam quasi, voluptas expedita 
+                            suscipit? Quas consequuntur rem cupiditate tempore maxime magni dolor voluptate, 
+                            impedit, incidunt similique praesentium et eligendi qui maiores eveniet distinctio
+                             aliquid reiciendis odit nobis asperiores totam debitis ullam? Similique, fugit aut, 
+                             veniam quas impedit numquam maiores reprehenderit cumque repudiandae cupiditate 
+                             ratione amet error pariatur nemo! Ullam aliquam non inventore, at omnis qui ea 
+                             accusantium quam maxime sequi labore consectetur repellendus quidem quod aliquid 
+                             possimus dolor itaque explicabo nulla repudiandae cupiditate iste, est dolorum rerum. 
+                             Placeat id natus quasi laudantium nam perspiciatis error magni tempore quas officiis 
+                             nostrum eum aperiam, corrupti, illo veniam unde asperiores? Illo cumque harum eaque. 
                         </p>
+                    </div>
+                    <div class="imgBox">
+                        <img src="./Photo1.png" alt="">
                     </div>
                 </div>
             </section>
+            <!-- Services -->
+            <section class="services" id="services">
+                <div class="titre">
+                    <h2>Mes Services</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Odio, tempore voluptas?</p>
+                </div>
+                <div class="content">
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon1.png" alt="">
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon2.png" alt="">
+                        <h2>Devellopement Web</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon3.png" alt="">
+                        <h2>Android Apps</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon4.png" alt="">
+                        <h2>Photoshop</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon5.png" alt="">
+                        <h2>Content Writer</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/icon6.png" alt="">
+                        <h2>Video Editor</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio" id="portfolio">
+                <div class="titre">
+                    <h2>Portfolio</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Odio, tempore voluptas?</p>
+                </div>
+                <div class="content">
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img1.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 01</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img2.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                           <h3>Projet 02</h3> 
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img3.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                           <h3>Projet 03</h3> 
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img4.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 04</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img5.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 05</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img6.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 06</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img7.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 07</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img8.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 08</h3>
+                        </div>
+                    </div>
+                    <div class="slideBox">
+                        <div class="imgBox">
+                            <img src="./ressources/images/img9.jpg" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Projet 09</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         
     </div>
