--- a/index.html
+++ b/index.html
@@ -11,13 +11,46 @@
 <body>
     <div class="container">
         <div id="navigation">
-            <ul>
-                <li><a href="#sec">Home</a></li>
-                <li><a href="#aPropos">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            
+            <div class="listes">
+                <div class="num">
+                    <span>1</span>
+                </div>
+                <div class="texte">
+                    <a href="#sec">Home</a>
+                    </div>
+            </div>
+            <div class="listes">
+                <div class="num">
+                    <span>2</span>
+                </div>
+                <div class="texte">
+                    <a href="#aPropos">About</a>
+                    </div>
+            </div >
+            <div class="listes">
+                <div class="num">
+                    <span>3</span>
+                </div>
+                <div class="texte">
+                    <a href="#services">Services</a>
+                    </div>
+            </div>
+            <div class="listes">
+                <div class="num">
+                    <span>4</span>
+                </div>
+                <div class="texte">
+                    <a href="#portfolio">Portfolio</a>
+                    </div>
+            </div>
+            <div class="listes">
+                <div class="num">
+                    <span>5</span>
+                </div>
+                <div class="texte"><a href="#">Contact</a>
+                    </div>
+            </div>
         </div>
         <div class="main" id="main">
             <div class="topBar" id="topBar">
@@ -77,32 +110,32 @@
                     <div class="serviceBox">
                         <img src="./ressources/images/icon1.png" alt="">
                         <h2>Web Design</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon2.png" alt="">
                         <h2>Devellopement Web</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon3.png" alt="">
                         <h2>Android Apps</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon4.png" alt="">
                         <h2>Photoshop</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon5.png" alt="">
                         <h2>Content Writer</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon6.png" alt="">
                         <h2>Video Editor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae, laudantium facere laboriosam amet ipsum quam porro corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                 </div>
             </section>
@@ -186,6 +219,9 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <div class="copyright">
+                <p>Copyright © 2022 Medjahed Khalil. Tous Droits Réservés.</p>
             </div>
         </div>
         
