responsive version 1 beta

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/fca1edefcc.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="darkMode">
     <div class="container">
         <div id="navigation">
             
@@ -17,7 +17,7 @@
                     <span>1</span>
                 </div>
                 <div class="texte">
-                    <a href="#sec">Home</a>
+                    <a href="#sec">Accueil</a>
                     </div>
             </div>
             <div class="listes">
@@ -25,7 +25,7 @@
                     <span>2</span>
                 </div>
                 <div class="texte">
-                    <a href="#aPropos">About</a>
+                    <a href="#aPropos">à propos</a>
                     </div>
             </div >
             <div class="listes">
@@ -51,10 +51,13 @@
                 <div class="texte"><a href="#">Contact</a>
                     </div>
             </div>
+            <div class="colorMode" id="colorMode">
+                <!-- <i class="far fa-moon"></i> -->
+            </div>
         </div>
         <div class="main" id="main">
             <div class="topBar" id="topBar">
-                <a href="#" class="logo">Logo</a>
+                <a href="#" class="logo">Khalil </a>
                 <div id="toggle"></div>
             </div>
             <section class="banner" id="sec">
@@ -94,9 +97,9 @@
                              nostrum eum aperiam, corrupti, illo veniam unde asperiores? Illo cumque harum eaque. 
                         </p>
                     </div>
-                    <div class="imgBox">
+                    <!-- <div class="imgBox">
                         <img src="./Photo1.png" alt="">
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <!-- Services -->
@@ -145,8 +148,13 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Odio, tempore voluptas?</p>
                 </div>
+                <div class="popupPortfolio" id="popupPortfolio">
+                    <div class="popUpCloseBtn" id="popUpCloseBtn">&times;</div>
+                    <h1>Test Test</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, tempore officiis dolores fugiat alias vero obcaecati eveniet ullam eius inventore eligendi reiciendis rerum odit dolore magnam, perspiciatis animi nostrum quisquam?</p>
+                </div>
                 <div class="content">
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide1">
                         <div class="imgBox">
                             <img src="./ressources/images/img1.jpg" alt="">
                         </div>
@@ -154,7 +162,7 @@
                             <h3>Projet 01</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox"id="slide2">
                         <div class="imgBox">
                             <img src="./ressources/images/img2.jpg" alt="">
                         </div>
@@ -162,7 +170,7 @@
                            <h3>Projet 02</h3> 
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox"id="slide3">
                         <div class="imgBox">
                             <img src="./ressources/images/img3.jpg" alt="">
                         </div>
@@ -170,7 +178,7 @@
                            <h3>Projet 03</h3> 
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide4">
                         <div class="imgBox">
                             <img src="./ressources/images/img4.jpg" alt="">
                         </div>
@@ -178,7 +186,7 @@
                             <h3>Projet 04</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide5">
                         <div class="imgBox">
                             <img src="./ressources/images/img5.jpg" alt="">
                         </div>
@@ -186,7 +194,7 @@
                             <h3>Projet 05</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide6">
                         <div class="imgBox">
                             <img src="./ressources/images/img6.jpg" alt="">
                         </div>
@@ -194,7 +202,7 @@
                             <h3>Projet 06</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide7">
                         <div class="imgBox">
                             <img src="./ressources/images/img7.jpg" alt="">
                         </div>
@@ -202,7 +210,7 @@
                             <h3>Projet 07</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide8">
                         <div class="imgBox">
                             <img src="./ressources/images/img8.jpg" alt="">
                         </div>
@@ -210,7 +218,7 @@
                             <h3>Projet 08</h3>
                         </div>
                     </div>
-                    <div class="slideBox">
+                    <div class="slideBox" id="slide9">
                         <div class="imgBox">
                             <img src="./ressources/images/img9.jpg" alt="">
                         </div>
