responsive version 2 beta

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                              nostrum eum aperiam, corrupti, illo veniam unde asperiores? Illo cumque harum eaque. 
                         </p>
                     </div>
-                    <!-- <div class="imgBox">
+                    <div class="imgBox">
                         <img src="./Photo1.png" alt="">
-                    </div> -->
+                    </div>
                 </div>
             </section>
             <!-- Services -->
