Contenu en cours

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span>3</span>
                 </div>
                 <div class="texte">
-                    <a href="#services">Services</a>
+                    <a href="#services">Compétences</a>
                     </div>
             </div>
             <div class="listes">
@@ -57,7 +57,7 @@
         </div>
         <div class="main" id="main">
             <div class="topBar" id="topBar">
-                <a href="#" class="logo">Khalil </a>
+                <a href="#" class="logo">fullstack </a>
                 <div id="toggle"></div>
             </div>
             <section class="banner" id="sec">
@@ -70,6 +70,7 @@
                     <p>Je suis un dévellopeur web junior "Fullstack".</p>
                     <a href="#" class="btn">Plus de Détails</a>
                     <ul class="socialMedia">
+                        <li><a href=""><i class="fab fa-github"></i></a></li>
                         <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                         <li><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -105,39 +106,39 @@
             <!-- Services -->
             <section class="services" id="services">
                 <div class="titre">
-                    <h2>Mes Services</h2>
+                    <h2>Mes Compétences</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Odio, tempore voluptas?</p>
                 </div>
                 <div class="content">
                     <div class="serviceBox">
                         <img src="./ressources/images/icon1.png" alt="">
-                        <h2>Web Design</h2>
+                        <h2>HTML5 CSS3</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon2.png" alt="">
-                        <h2>Devellopement Web</h2>
+                        <h2>JAVASCRIPT</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon3.png" alt="">
-                        <h2>Android Apps</h2>
+                        <h2>PHP</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon4.png" alt="">
-                        <h2>Photoshop</h2>
+                        <h2>MYSQL</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon5.png" alt="">
-                        <h2>Content Writer</h2>
+                        <h2>WORDPRESS</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon6.png" alt="">
-                        <h2>Video Editor</h2>
+                        <h2>Video Basic</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolorem enim quae.</p>
                     </div>
                 </div>
