--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <section class="services" id="services">
                 <div class="titre">
                     <h2>Mes Compétences</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Odio, tempore voluptas?</p>
+                    <p>Les principales compétences que je maitrise.</p>
                 </div>
                 <div class="content">
                     <div class="serviceBox">
@@ -180,7 +179,7 @@
                     </div>
                     <div class="slideBox"id="slide2">
                         <div class="imgBox">
-                            <img src="./ressources/images/img2.jpg" alt="">
+                            <img src="./ressources/images/quizz.png" alt="">
                         </div>
                         <div class="textBox">
                            <h3>Quizz <br>"HTML JS"</h3> 
@@ -189,7 +188,7 @@
                     </div>
                     <div class="slideBox"id="slide3">
                         <div class="imgBox">
-                            <img src="./ressources/images/img3.jpg" alt="">
+                            <img src="./ressources/images/quizz Mysql.png" alt="">
                         </div>
                         <div class="textBox">
                            <h3>Quizz <br>"PHP JS MYSQL"</h3> 
@@ -198,7 +197,7 @@
                     </div>
                     <div class="slideBox" id="slide4">
                         <div class="imgBox">
-                            <img src="./ressources/images/img4.jpg" alt="">
+                            <img src="./ressources/images/landingPage.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>Cette Landing Page </h3>
@@ -207,7 +206,7 @@
                     </div>
                     <div class="slideBox" id="slide5">
                         <div class="imgBox">
-                            <img src="./ressources/images/img5.jpg" alt="">
+                            <img src="./ressources/images/graceavous.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>Site E-Commerce</h3>
@@ -216,7 +215,7 @@
                     </div>
                     <div class="slideBox" id="slide6">
                         <div class="imgBox">
-                            <img src="./ressources/images/img6.jpg" alt="">
+                            <img src="./ressources/images/cartederecharge.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>Site E-Commerce</h3>
@@ -225,7 +224,7 @@
                     </div>
                     <div class="slideBox" id="slide7">
                         <div class="imgBox">
-                            <img src="./ressources/images/img7.jpg" alt="">
+                            <img src="./ressources/images/megasoog.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>Site E-Commerce</h3>
@@ -234,7 +233,7 @@
                     </div>
                     <div class="slideBox" id="slide8">
                         <div class="imgBox">
-                            <img src="./ressources/images/img8.jpg" alt="">
+                            <img src="./ressources/images/verclam.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>SAV Télephonie</h3>
@@ -243,7 +242,7 @@
                     </div>
                     <div class="slideBox" id="slide9">
                         <div class="imgBox">
-                            <img src="./ressources/images/img9.jpg" alt="">
+                            <img src="./ressources/images/verclam.png" alt="">
                         </div>
                         <div class="textBox">
                             <h3>Rapport Equipe Commerciale</h3>
