button rajouté dans les slider, et le popup désactivé

--- a/ressources/pages/cv.html
+++ b/ressources/pages/cv.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="../styles/cv.css">
     <title>CV</title>
 </head>
 <body>
-    <div><a href="./index.html"><i class="fas fa-arrow-left"  ></i></a></i></div>
-    <img src="./ressources/images/CV.png" alt="">
+    <div><a href="/index.html"><i class="fas fa-arrow-left"  ></i></a></i></div>
+    <img src="../images/CV.png" alt="">
     <script src="https://kit.fontawesome.com/fca1edefcc.js" crossorigin="anonymous"></script>
 </body>
 </html>
