button rajouté dans les slider, et le popup désactivé

--- a/ressources/pages/cv.html
+++ b/ressources/pages/cv.html
@@ -8,7 +8,7 @@
     <title>CV</title>
 </head>
 <body>
-    <div><a href="/index.html"><i class="fas fa-arrow-left"  ></i></a></i></div>
+    <div><a href="../../index.html"><i class="fas fa-arrow-left"  ></i></a></i></div>
     <img src="../images/CV.png" alt="">
     <script src="https://kit.fontawesome.com/fca1edefcc.js" crossorigin="anonymous"></script>
 </body>
