--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <h3>Site E-Commerce</h3>
                             <p>Site de E-Commerce "Vente carte cadeau virtuelle" fonctionelle, établi depuis plus d'un an conçu avec Wordpress et WooCommerce.</p>
                             <div class="btnInterne">
-                                <button onclick="window.open('https://cartederecharge.com/', '_blank');">
+                                <button onclick="window.open('https://verclamdistrib.com/', '_blank');">
                                     <i class="fas fa-search"></i>
                                     Aperçu</button>
                                 
