bouton contact deleted from navigation bar

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     <a href="#portfolio">Portfolio</a>
                     </div>
             </div>
-            <div class="listes">
+            <!-- <div class="listes">
                 <div class="num">
                     <span>5</span>
                 </div>
                 <div class="texte"><a href="#">Contact</a>
                     </div>
-            </div>
+            </div> -->
             <div class="colorMode" id="colorMode">
                 <!-- <i class="far fa-moon"></i> -->
             </div>
